Changed the storage units to be uniquely IDed, set up all boxes (for shelves without variable box sizes), fixed horizontal overflow on most pages.
Added GridGenerator.java. It can be ignored for the most part, it just creates IDed grids

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     background-color: rgb(200, 221, 245);
     margin-top: 20px;
     /* dumb solution that will probably break something else */
+    overflow-x: hidden; /* sneakily hides a lot of formatting errors oops */
 }
 
 a:visited {
